# opengl_framework

./: .gitignore  CMakeLists.txt  README.md
include/: opengl_framework.hpp
include/geometry/: color.hpp  element.hpp  vector_utils.hpp
include/physics/: physics.hpp
include/world/: ogl_world.hpp
include/wrapper/: ogl_wrapper.hpp  shader.hpp
src/: Color.h  Gameworld.cpp  Gameworld.h  SimpleFragmentShader.shader  SimpleVertexShader.shader  boundaries.hpp  color.hpp  coordinates.cpp  coordinates.hpp  cute_c2.h  element.cpp  element.hpp  geom.cpp  geom.hpp  main.cpp  ogl_world.cpp  ogl_world.hpp  ogl_wrapper.cpp  ogl_wrapper.hpp  physics.cpp  physics.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp  triangle.cpp  triangle.hpp  vector_utils.hpp
tests/: CMakeLists.txt  main.cpp  platformer.cpp  pong.cpp  tests_collision.cpp  tests_geom.cpp  tests_input_collision.cpp  tests_mouse.cpp  tests_resize.cpp  tests_sevenseg.cpp  tests_text.cpp
